# AM_LDFLAGS = -lgomp -ggdb3
# AM_CPPFLAGS = -Wno-deprecated -Wall $(SEQAN_CFLAGS) -fopenmp -ggdb3
# AM_CXXFLAGS = -O0 -pg -gstabs -ggdb3



# We don't want to follow GNU file setup (no README, no AUTHORS, etc)
AUTOMAKE_OPTIONS = foreign
# We have two dirs with code and (Makefile.am's) in them
SUBDIRS = src
